# cpp-background-watcher

./: .env  .gitignore  CMakeLists.txt  README.md
server/: index.js  package-lock.json  package.json
src/: event_listener.cpp  event_listener.h  file_reader.cpp  file_reader.h  file_uploader.cpp  file_uploader.h  main.cpp  system_profiler.cpp  system_profiler.h  time_formatter.cpp  time_formatter.h
